Add new music listing page and update routes

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -96,3 +96,126 @@ body, html {
     background: rgba(255, 255, 255, 0.7);
     width: 0;
 }
+
+.upload-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    max-width: 400px;
+    width: 100%;
+    padding: 20px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.upload-container h1 {
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+.upload-container form div {
+    margin-bottom: 15px;
+    width: 100%;
+}
+
+.upload-container form label {
+    color: #fff;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.upload-container form input[type="text"],
+.upload-container form input[type="file"],
+.upload-container form input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.upload-container form input[type="text"],
+.upload-container form input[type="file"] {
+    background: rgba(0, 0, 0, 0.8);
+    margin-bottom: 10px;
+}
+
+.genre-card {
+    min-width: 100px;
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    flex-shrink: 0;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.genre-card:hover {
+    transform: scale(1.1);
+}
+
+
+.upload-container form input[type="submit"] {
+    background: #4CAF50;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.upload-container form input[type="submit"]:hover {
+    background: #45a049;
+}
+
+section .recent-music-item {
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+}
+
+section .recent-music-item img {
+    width: 50px;
+    height: 50px;
+    object-cover: cover;
+    border-radius: 50%;
+}
+
+section .recent-music-item .info {
+    margin-left: 10px;
+}
+
+section .recent-music-item .info h3 {
+    margin: 0;
+    color: white;
+    font-size: 1rem;
+}
+
+section .recent-music-item .info p {
+    margin: 2px 0;
+    color: #ccc;
+    font-size: 0.875rem;
+}
+
+section .recent-music-item button {
+    margin-left: auto;
+    padding: 5px 10px;
+    background-color: #1d72b8;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+section .recent-music-item button:hover {
+    background-color: #155a8a;
+}
